--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,6 +19,13 @@
   }
 }
 
+nav {
+  background-color: #0a0a0a;
+  text-decoration: underline;
+  border-bottom: 2px solid green ;
+  
+}
+
 body {
   background: var(--background);
   color: var(--foreground);
